--- a/MonkeySays/MonkeySays.vcxproj.filters
+++ b/MonkeySays/MonkeySays.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Sentence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Chronometer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MonkeyTyper.h">
@@ -33,6 +36,9 @@
       <Filter>Resource Files</Filter>
     </ClInclude>
     <ClInclude Include="Sentence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Chronometer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
