--- a/MonkeySays/MonkeySays.vcxproj
+++ b/MonkeySays/MonkeySays.vcxproj
@@ -130,10 +130,13 @@
     <ClCompile Include="Chronometer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MonkeyTyper.cpp" />
+    <ClCompile Include="RandomNumberGenerator.cpp" />
     <ClCompile Include="Sentence.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Chronometer.h" />
+    <ClInclude Include="GenerationMethod.h" />
+    <ClInclude Include="RandomNumberGenerator.h" />
     <ClInclude Include="Sentence.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="MonkeyTyper.h" />
