--- a/MonkeySays/MonkeySays.vcxproj.filters
+++ b/MonkeySays/MonkeySays.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Chronometer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RandomNumberGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MonkeyTyper.h">
@@ -39,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Chronometer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RandomNumberGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GenerationMethod.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
